methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:15: error: not found: value fiareMotif
  fiareMotif()
  ^